KUBE/eks-three-tire/kube_yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: three-tier

spec:

  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: qamre/three-tier-docker-compose-backend:v1 

          ports:
            - containerPort: 5000

          readinessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 20
            periodSeconds: 20
