KUBE/eks-three-tire/kube_yaml/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
